--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -35,6 +35,28 @@
   	  	  </div>
 
        <div class="high">
+        <div class="row top-margin">
+         <div class="col-xs-12 pre-box">
+          <div class="col-xs-12 col-sm-4 text-center no-leftpadding">
+            <img class="screenshot image-responsive" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" />
+          </div>
+          <div class="col-xs-12 col-sm-8 text-left">
+            <p class="screenshot"><img src="${path}/static/images/astronomy-pre-banner.png" alt="Astronomy banner" /><br />
+            <span class="grey">${_('Explore the Outer Space.')}</span></p>
+              <div class="col-xs-6 text-center">
+                <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/Fedora-Live-Astronomy-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
+                <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Astronomy']}</h5>
+              </div>
+              <div class="col-xs-6 text-center">
+                <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/Fedora-Live-Astronomy-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+                <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Astronomy']}</h5>
+              </div>
+            </div>
+           </div>
+          </div>
+       </div>
+
+       <div class="high">
     	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
