--- a/getfedora.org/data/content/cloud/prerelease/atomic.html
+++ b/getfedora.org/data/content/cloud/prerelease/atomic.html
@@ -79,11 +79,11 @@
             <h2 class="cloudy">${Markup(_('Atomic %(state)s Images')) % {'state': global_variables.release['curr_state']}}</h2>
             <p>${_('Fedora Atomic represents the leading edge of Project Atomic development. The images published here showcase that work. Note that the images have passed several levels of automated testing, but are not always subjected to manual testing by the QA team.')}</p>
             <p>${Markup(_('Please test before using new versions in production. If you do discover a problem, the Atomic tools make it easy to flip back to an earlier release — and if that happens, please also help us by &lt;a href="%s"&gt;filing bugs&lt;/a&gt; or &lt;a href="%s"&gt;submitting fixes&lt;/a&gt;.' % ('http://www.projectatomic.io/community/', 'https://github.com/projectatomic/')))}</p>
-            <p>${_('Fedora Atomic Host images are updated roughly every two weeks, rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.')}</p>
-            <p>${Markup(_('Note that different Fedora Atomic Host media are subject to different levels of automatic testing. We are making continuous improvements to these tests; &lt;a href="%s"&gt;click here&lt;/a&gt; to see the current test status.' % 'https://apps.fedoraproject.org/autocloud/jobs/'))}</p>
+<!--            <p>${_('Fedora Atomic Host images are updated roughly every two weeks, rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.')}</p>
+            <p>${Markup(_('Note that different Fedora Atomic Host media are subject to different levels of automatic testing. We are making continuous improvements to these tests; &lt;a href="%s"&gt;click here&lt;/a&gt; to see the current test status.' % 'https://apps.fedoraproject.org/autocloud/jobs/'))}</p> -->
             <p class="bold">${Markup(_('You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;.') % ('http://projectatomic.io/'))}</p>
-            <p py:if="not global_variables.release['pre_cloud_atomic_freshness']" class="warning">${Markup(_('The latest two week build did not meet our testing criteria. The images available are from over %(pre_cloud_atomic_age)s. Check the Project Atomic blog for updates and information about Atomic blocker bugs.') % global_variables.release)}</p>
-            <p py:if="global_variables.release['pre_cloud_atomic_freshness']" class="warning">${Markup(_('These are the latest official Fedora Atomic Host images, produced %(pre_cloud_atomic_age)s.') % global_variables.release)}</p>
+<!--            <p py:if="not global_variables.release['pre_cloud_atomic_freshness']" class="warning">${Markup(_('The latest two week build did not meet our testing criteria. The images available are from over %(pre_cloud_atomic_age)s. Check the Project Atomic blog for updates and information about Atomic blocker bugs.') % global_variables.release)}</p>
+            <p py:if="global_variables.release['pre_cloud_atomic_freshness']" class="warning">${Markup(_('These are the latest official Fedora Atomic Host images, produced %(pre_cloud_atomic_age)s.') % global_variables.release)}</p> -->
             <h3>${_('Atomic Image')}</h3>
           </div>
       </div>
@@ -92,14 +92,14 @@
           <div class="col-xs-12">
             <h5 class="bold">${_('qcow2 Image')}</h5>
             <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a Qcow2-formatted image for use with OpenStack.')) % {'rel':global_variables.release['next_id'], 'state': global_variables.release['curr_state']}}</p>
-            <a class="btn btn-success download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
+            <a class="btn btn-success download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
+              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['manual_pre_atomic_qcow2_cloud']}</p>
           </div>
           <div class="col-xs-12">
             <h5 class="bold">${_('Raw Image')}</h5>
             <p>${Markup(_('This is Fedora %(rel)s %(state)s Cloud Atomic Host in a compressed raw image format. If you\'re not sure what to use, try this.')) % {'rel':global_variables.release['next_id'], 'state': global_variables.release['curr_state']}}</p>
-            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
+            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
+              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['manual_pre_atomic_raw_cloud']}</p>
           </div>
       </div>
 
@@ -116,12 +116,12 @@
       </div>
       <div class="row hidden-xs">
           <div class="col-sm-6">
-            <a class="btn btn-success download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['pre_atomic_qcow2_cloud']}</p>
+            <a class="btn btn-success download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
+              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['manual_pre_atomic_qcow2_cloud']}</p>
           </div>
           <div class="col-sm-6">
-            <a class="btn btn-success download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['pre_atomic_raw_cloud']}</p>
+            <a class="btn btn-success download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
+              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['manual_pre_atomic_raw_cloud']}</p>
           </div>
       </div>
       <!-- end Desktop -->
@@ -138,14 +138,14 @@
           <div class="col-xs-12">
             <h5 class="bold">${_('VirtualBox Image')}</h5>
             <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
-              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
+            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
+              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Vagrant Image') % global_variables.iso_size['manual_pre_atomic_VBvag_cloud']}</p>
           </div>
           <div class="col-xs-12">
             <h5 class="bold">${_('libvirt/KVM Image')}</h5>
             <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
-              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
+            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
+              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Vagrant Image') % global_variables.iso_size['manual_pre_atomic_libvag_cloud']}</p>
           </div>
         </div>
 
@@ -162,12 +162,12 @@
         </div>
         <div class="row hidden-xs">
           <div class="col-sm-6">
-            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
-              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Vagrant Image') % global_variables.iso_size['pre_atomic_VBvag_cloud']}</p>
+            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
+              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Vagrant Image') % global_variables.iso_size['manual_pre_atomic_VBvag_cloud']}</p>
           </div>
           <div class="col-sm-6">
-            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download_atomic']}/testing/${global_variables.release['next_id']}-${global_variables.release['pre_cloud_atomic_composedate']}/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_atomic_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
-              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Vagrant Image') % global_variables.iso_size['pre_atomic_libvag_cloud']}</p>
+            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
+              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Vagrant Image') % global_variables.iso_size['manual_pre_atomic_libvag_cloud']}</p>
           </div>
         </div>
       <!-- End Vagrant -->
