--- a/getfedora.org/data/content/cloud/prerelease/atomic.html
+++ b/getfedora.org/data/content/cloud/prerelease/atomic.html
@@ -144,7 +144,7 @@
           <div class="col-xs-12">
             <h5 class="bold">${_('libvirt/KVM Image')}</h5>
             <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['pre_cloud_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
+            <a class="btn btn-success btn-fix download-cloud download-cloud" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Cloud/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['next_cloud_id']}_${global_variables.release['curr_cloud_state']}-${global_variables.release['manual_pre_cloud_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
               <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Vagrant Image') % global_variables.iso_size['manual_pre_atomic_libvag_cloud']}</p>
           </div>
         </div>
