open News section to promote F24 Alpha on gfo, labs and spins

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -183,7 +183,7 @@
   </div>
   </div>
 
-<!-- News
+<!-- News -->
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -219,6 +219,6 @@
           </div>
         </py:otherwise>
       </py:choose>
--->
+
 </body>
 </html>
