--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -175,7 +175,7 @@
 
   </div>
 
-<!-- News 
+<!-- News -->
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -211,6 +211,6 @@
           </div>
         </py:otherwise>
       </py:choose>
--->
+
 </body>
 </html>
