fix genshi markups for regional delegate titles

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -193,10 +193,10 @@ calendar, fiscal year (previous, current, future), topic, Responsible
           <div class="table-responsive">
             <table class="table">
               <tr>
-                <th>{_('Region')}</th>
-                <th>{_('Treasurer')}</th>
-                <th>{_('Logistician')}</th>
-                <th>{_('Storyteller')}</th>
+                <th>${_('Region')}</th>
+                <th>${_('Treasurer')}</th>
+                <th>${_('Logistician')}</th>
+                <th>${_('Storyteller')}</th>
               </tr>
               <tr>
                   <td><a href="#council">${_('COUNCIL')}</a></td>
