budget numbers title needs a hyperlink

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -49,7 +49,7 @@
         -->
 
         <div id="budgetnumbers">
-        <h2>${_('Budget Numbers')}</h2>
+        <h2><a href="#budgetnumbers">${_('Budget Numbers')}</a></h2>
           <div class="table-responsive">
             <table class="table">
               <tr>
