--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -48,8 +48,9 @@
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Astronomy']}</h5>
               </div>
               <div class="col-xs-6 text-center">
-                <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Astronomy_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--                <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Astronomy_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Astronomy']}</h5>
+-->
               </div>
             </div>
            </div>
@@ -70,8 +71,9 @@
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Design']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Design_suite-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Design_suite-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Design']}</h5>
+-->
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
@@ -115,8 +117,9 @@
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Jam']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Jam_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Jam_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Jam']}</h5>
+-->
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
@@ -137,8 +140,9 @@
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Robotics']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Robotics-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Robotics-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Robotics']}</h5>
+-->
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
@@ -159,8 +163,9 @@
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Sci-kde']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Scientific_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Scientific_KDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Sci-kde']}</h5>
+-->
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
@@ -181,8 +186,9 @@
     	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Security']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
-    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Security-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
+<!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Security-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_i686_Live_Security']}</h5>
+-->
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
@@ -203,7 +209,8 @@
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 64bit!')}</a>
             </div>
             <div class="col-sm-4 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 32bit!')}</a>
+<!--              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 32bit!')}</a>
+-->
             </div>
           </div>
   	  </div>
