--- a/getfedora.org/data/content/cloud/prerelease/index.html
+++ b/getfedora.org/data/content/cloud/prerelease/index.html
@@ -31,12 +31,13 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left recover-heading">
           <h2>${Markup(_('Download Fedora %(rel)s %(state)s Cloud')) % {'rel':global_variables.release['next_id'], 'state': global_variables.release['curr_state']}}</h2>
-            <p>${_('There are two main versions of Fedora Cloud available:')}
+<!--            <p>${_('There are two main versions of Fedora Cloud available:')}
               <ul>
                 <li>${Markup(_('&lt;a href="index.html"&gt;Base images&lt;/a&gt; suitable for creating VMs.'))}</li>
                 <li>${Markup(_('&lt;a href="atomic.html"&gt;Atomic images&lt;/a&gt; for creating hosts for container deployment.'))}</li>
               </ul>
             </p>
+-->
         </div>
       </div>
     </div>
@@ -55,7 +56,7 @@
           <div class="collapse navbar-collapse navbar-center">
               <ul class="nav navbar-nav">
                   <li class=""><a href="index.html" class="active">${_('Base Images')}</a></li>
-                  <li class=""><a href="atomic.html">${_('Atomic Images')}</a></li>
+<!--                  <li class=""><a href="atomic.html">${_('Atomic Images')}</a></li>-->
                   <li class=""><a href="docker.html">${_('Docker Image')}</a></li>
               </ul>
           </div>
