no vagrant images for Alpha, revert for Beta

--- a/getfedora.org/data/content/cloud/prerelease/index.html
+++ b/getfedora.org/data/content/cloud/prerelease/index.html
@@ -121,14 +121,13 @@
       </div>
       <!-- end Desktop -->
 
-      <!-- Start Vagrant -->
+<!-- Start Vagrant
         <div class="row">
             <div class="col-xs-12 top-margin">
               <h3>${_('Base Cloud Images for Vagrant')}</h3>
               <p>${_('These images are Vagrant Boxes images for deployment using Vagrant.')}</p>
             </div>
         </div>
-        <!-- Mobile -->
         <div class="row visible-xs">
           <div class="col-xs-12">
             <h5 class="bold">${_('VirtualBox Image')}</h5>
@@ -144,7 +143,6 @@
           </div>
         </div>
 
-          <!-- Desktop -->
         <div class="row hidden-xs">
           <div class="col-sm-6">
             <h5 class="bold">${_('VirtualBox Image')}</h5>
@@ -165,7 +163,7 @@
               <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['pre_libvag_cloud']}</p>
           </div>
         </div>
-      <!-- End Vagrant -->
+End Vagrant -->
 
 
       <!-- Start Amazon -->
