do not display Alpha banner in design, games and security - show it in Jam

--- a/labs.fedoraproject.org/data/content/games/download/index.html
+++ b/labs.fedoraproject.org/data/content/games/download/index.html
@@ -44,7 +44,7 @@
                   <p><a href="http://archive.fedoraproject.org/">archive.fedoraproject.org</a></p>
               </li>
           </ul>
-          <div class="bottom-margin">
+<!--          <div class="bottom-margin">
           <py:choose>
             <py:when test="global_variables.release['curr_state'] == 'Alpha'">
               <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
@@ -55,7 +55,7 @@
                 <a href="${path}/prerelease"><img alt="Fedora ${global_variables.release['next_id']} Beta is here!" src="${path}/static/images/banners/f${global_variables.release['next_id']}beta.png" /></a>
             </py:when>
           </py:choose>
-          </div>
+          </div>-->
           <noscript>
           <div class="bottom-margin">
             <h3>${_('Verify')}</h3>
