--- a/labs.fedoraproject.org/data/content/jam/download/index.html
+++ b/labs.fedoraproject.org/data/content/jam/download/index.html
@@ -45,7 +45,7 @@
               </li>
           </ul>
           <div class="bottom-margin">
-<!--          <py:choose>
+          <py:choose>
             <py:when test="global_variables.release['curr_state'] == 'Alpha'">
               <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
               <a href="${path}/prerelease"><img alt="Fedora ${global_variables.release['next_id']} Alpha is here!" src="${path}/static/images/banners/f${global_variables.release['next_id']}alpha.png" /></a>
@@ -54,7 +54,7 @@
                 <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
                 <a href="${path}/prerelease"><img alt="Fedora ${global_variables.release['next_id']} Beta is here!" src="${path}/static/images/banners/f${global_variables.release['next_id']}beta.png" /></a>
             </py:when>
-          </py:choose>-->
+          </py:choose>
           </div>
           <noscript>
           <div class="bottom-margin">
