update host1plus logo - issue #5

--- a/getfedora.org/data/content/sponsors.html
+++ b/getfedora.org/data/content/sponsors.html
@@ -77,7 +77,7 @@
         <a href="http://www.bodhost.com/"><img src="${path}/static/images/sponsors/bodhost.png" alt="BODHost" /></a>
       </div>
       <div class="col-xs-12 col-md-3 text-center fedora-header">
-        <a href="http://www.host1plus.com"><img src="${path}/static/images/sponsors/host1plus.jpg" alt="host1plus" /></a>
+        <a href="http://www.host1plus.com"><img src="${path}/static/images/sponsors/host1plus.png" alt="host1plus" /></a>
       </div>
       <div class="col-xs-12 col-md-3 text-center fedora-header">
         <a href="http://www.internetx.com/"><img src="${path}/static/images/sponsors/internetx.png" alt="InterNetX" /></a>
