Fix Polish characters (thanks Rafal)
Fixes: #6

--- a/flocktofedora.org/data/content/location/index.html
+++ b/flocktofedora.org/data/content/location/index.html
@@ -92,7 +92,7 @@
 		${_('The city of Krakow is the second largest city of Poland and is the country\'s former capital. It is sometimes spelled as Cracow in English, although its correct English name is Krakow nowadays. Krakow is the top tourist destination in Poland. The city basks in the glory of its long history and greatly treasures its reputation as the culture capital of Poland.')}
 	      </p>
 	      <p>
-		${_('Krakow\'s seven universities, plus almost twenty other institutions of higher education, make it the country\'s leading center of science and education. The city\'s expanding service sector is the lifeblood of local economy, but varied industry and production still provide substantial proportions of jobs and wealth. Krakow is the metropolis of southern Poland and the capital city of the Malopolska Province. The city has about 755,000 permanent residents, and the Krakow conurbation totals some 1.5 million people. The cosmopolitan atmosphere of the city center may be somewhat misleading. Despite recent growth in the number of immigrants and expatriates, inhabitants of Krakow remain ethnically almost homogeneous and proudly declare their Polish nationality.')}
+		${_('Krakow\'s seven universities, plus almost twenty other institutions of higher education, make it the country\'s leading center of science and education. The city\'s expanding service sector is the lifeblood of local economy, but varied industry and production still provide substantial proportions of jobs and wealth. Krakow is the metropolis of southern Poland and the capital city of the Małopolska Province. The city has about 755,000 permanent residents, and the Krakow conurbation totals some 1.5 million people. The cosmopolitan atmosphere of the city center may be somewhat misleading. Despite recent growth in the number of immigrants and expatriates, inhabitants of Krakow remain ethnically almost homogeneous and proudly declare their Polish nationality.')}
               </p>
 <!--
               <ul>
@@ -104,7 +104,7 @@
               <p><strong>${_('Do not wait until the last minute to book your room.')}</strong> ${_('If you plan to go to Flock, you should book your room now.')}</p>
 -->
 	      <p>
-		${_('Trains from the airport to the City Center depart every 30 minutes. From the City Center, take bus 130 from the Dworzec Glowny Zachod stop (or the Dworzec Glwny stop if late at night), at the galeria/train/bus station, toward Azory to the Rozyckiego stop. A 20 minute ticket is sufficient. From the bus stop, the hotel is a 10 minute walk.')}
+		${_('Trains from the airport to the City Center depart every 30 minutes. From the City Center, take bus 130 from the Dworzec Główny Zachód stop (or the Dworzec Główny stop if late at night), at the Galeria Krakowska train/bus station, toward Azory to the Różyckiego stop. A 20 minute ticket is sufficient. From the bus stop, the hotel is a 10 minute walk.')}
 	      </p>
             </div>
           </div>
