flocktofedora: Fix missing slash

--- a/flocktofedora.org/data/content/location/index.html
+++ b/flocktofedora.org/data/content/location/index.html
@@ -104,7 +104,7 @@
               <p><strong>${_('Do not wait until the last minute to book your room.')}</strong> ${_('If you plan to go to Flock, you should book your room now.')}</p>
 -->
 	      <p>
-		${_('Trains from the airport to the City Center depart every 30 minutes. From the City Center, take bus 130 from the Dworzec Główny Zachód stop (or the Dworzec Główny stop if late at night), at the Galeria Krakowska train/bus station, toward Azory to the Różyckiego stop. A 20 minute ticket is sufficient. From the bus stop, the hotel is a 10 minute walk.')}
+		${_('Trains from the airport to the City Center depart every 30 minutes. From the City Center, take bus 130 from the Dworzec Główny Zachód stop (or the Dworzec Główny stop if late at night), at the Galeria Krakowska/train/bus station, toward Azory to the Różyckiego stop. A 20 minute ticket is sufficient. From the bus stop, the hotel is a 10 minute walk.')}
 	      </p>
             </div>
           </div>
