Added "Big Number"; s/Fedora Premier Events/Fedora Events/g

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -62,14 +62,14 @@
               </tr>
               <tr>
                   <td><a href="#overall">${_('TOTAL BUDGET')}</a></td>
-                <td>$000</td>
+                <td>$195,000</td>
                 <td>Q1</td>
                 <td>Q2</td>
                 <td>Q3</td>
                 <td>Q4</td>
               </tr>
               <tr>
-                  <td><a href="#premierevents">${_('PREMIER EVENTS')}</a></td>
+                  <td><a href="#fedoraevents">${_('FEDORA EVENTS')}</a></td>
                 <td>$000</td>
                 <td>Q1</td>
                 <td>Q2</td>
@@ -142,7 +142,7 @@
         <p>${_('The budget will be split into discreet chunks as follows (FY17 and Beyond):')}</p>
 
         <ul>
-          <li>${_('Fedora Premier Events (FLOCK/FUDCons)')}</li>
+          <li>${_('Fedora Events (FLOCK/FUDCons)')}</li>
           <li>${_('Regional Budgets (APAC/EMEA/LATAM/NA)')}</li>
           <li>${_('Discretionary Council Budget (non-regional general funds)')}</li>
         </ul>
@@ -279,7 +279,7 @@ calendar, fiscal year (previous, current, future), topic, Responsible
         <ol>
           <li>${_('Budget allocation for your region')}</li>
           <li>${_("Each delegate will be awarded a special Fedora Badge")}</li>
-          <li>${_("ONE delegate from each region will get travel/accommodations covered for their region's Fedora Premier Event (FLOCk or FUDCon)")}</li>
+          <li>${_("ONE delegate from each region will get travel/accommodations covered for their region's Fedora Event (FLOCk or FUDCon)")}</li>
         </ol>
 
         <p>${_("This new budget and regional delegation model will become part of a larger Community wide body. This body will have broad participation across subprojects, websites, and teams, with Regional Ambassador Delegates having the largest number of members. This body will be the subject of future discussion once we've gotten our regional ambassador strategy back on track.")}</p>
