Added full LATAM, partial EMEA, delegation selections

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -212,15 +212,15 @@ calendar, fiscal year (previous, current, future), topic, Responsible
               </tr>
               <tr>
                 <td><a href="#emea">EMEA</a></td>
-                <td><a href="mailto:">TBD</a></td>
-                <td><a href="mailto:">TBD</a></td>
+                <td><a href="mailto:mitzie@mitzelos.com">Zacharias Mitzelos (mitzie)</a></td>
+                <td><a href="mailto:eischmann@redhat.com">Jiri Eischmann (sesivany)</a></td>
                 <td><a href="mailto:">TBD</a></td>
               </tr>
               <tr>
                 <td><a href="#latam">LATAM</a></td>
-                <td><a href="mailto:">TBD</a></td>
-                <td><a href="mailto:">TBD</a></td>
-                <td><a href="mailto:">TBD</a></td>
+                <td><a href="mailto:abdel.g.martinez.l@gmail.com">Abdel G. Martinez L. (potty)</a></td>
+                <td><a href="mailto:echevemaster@gmail.com">Eduardo J. Echeverria A. (echevemaster)</a></td>
+                <td><a href="mailto:williamjmoernor@gmail.com">William Moreno Reyes (williamjmoreno)</a></td>
               </tr>
               <tr>
                 <td><a href="#na">NA</a></td>
