Added APAC delegates; added final EMEA delegate selection

--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -154,15 +154,15 @@
               </tr>
               <tr>
                 <td><a href="#apac">APAC</a></td>
-                <td><a href="mailto:">TBD</a></td>
-                <td><a href="mailto:">TBD</a></td>
-                <td><a href="mailto:">TBD</a></td>
+                <td><a href="mailto:kagesenshi.87@gmail.com">Mohd Izhar Firdaus Ismail (izhar)</a></td>
+                <td><a href="mailto:pj.pandit@yahoo.co.in">PJ Pandit (Pjp)</a></td>
+                <td><a href="mailto:me+fedora@gbraad.nl">Gerard Braad - 吉拉德 (gbraad)</a></td>
               </tr>
               <tr>
                 <td><a href="#emea">EMEA</a></td>
                 <td><a href="mailto:mitzie@mitzelos.com">Zacharias Mitzelos (mitzie)</a></td>
                 <td><a href="mailto:eischmann@redhat.com">Jiri Eischmann (sesivany)</a></td>
-                <td><a href="mailto:">TBD</a></td>
+                <td><a href="mailto:pkwesihanson@yahoo.com">Elijah Hanson (edgates)</a></td>
               </tr>
               <tr>
                 <td><a href="#latam">LATAM</a></td>
