--- a/fedoracommunity.org/data/content/apac.html
+++ b/fedoracommunity.org/data/content/apac.html
@@ -33,13 +33,13 @@ index=math.ceil(len(contries)/float(2))
 						<h2 class="continent-section-name">${_('Asia-Pacific')}</h2>
 						<h3>${_('Region-Wide Resources')}</h3>
 						<div class="prefix_1">
-						${Markup(_('The Asia-Pacific region is served by the &lt;a href="%s"&gt;Fedora Ambassadors APAC group&lt;/a&gt;.' % 'http://fedoraproject.org/wiki/Ambassadors/APAC'))}
+						${Markup(_('The Asia-Pacific region is served by the &lt;a href="%s"&gt;Fedora Ambassadors APAC group&lt;/a&gt;.' % 'https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_%28FAMAPAC%29'))}
 
 						<table>
 
 							<tr>
 								<th>${_('Fedora Wiki Page')}</th>
-								<td><a href="http://fedoraproject.org/wiki/Ambassadors/APAC">http://fedoraproject.org/wiki/Ambassadors/APAC</a></td>
+								<td><a href="https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_%28FAMAPAC%29">https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_(FAMAPAC)</a></td>
 							</tr><tr>
 								<th>${_('Mailing List')}</th>
 								<td><a href="mailto:ambassadors@lists.fedoraproject.org">ambassadors@lists.fedoraproject.org</a></td>
