"the Canada" to "Canada"
I change "the Canada" to "Canada". 
Perhaps, nation name doesnt need "the" at the head of name.

--- a/fedoracommunity.org/data/content/northam.html
+++ b/fedoracommunity.org/data/content/northam.html
@@ -28,7 +28,7 @@ index=math.ceil(len(contries)/float(2))
 						<h2 class="continent-section-name">${_('North America')}</h2>
 						<h3>${_('Region-Wide Resources')}</h3>
 						<div class="prefix_1">
-						${Markup(_('The North America region, including the USA and the Canada is served by the &lt;a href="%s"&gt;Fedora Ambassadors NA (FAmNA) group group&lt;/a&gt;.' % 'https://fedoraproject.org/wiki/Fedora_Ambassadors_North_America_%28FAMNA%29'))}
+						${Markup(_('The North America region, including the USA and Canada is served by the &lt;a href="%s"&gt;Fedora Ambassadors NA (FAmNA) group group&lt;/a&gt;.' % 'https://fedoraproject.org/wiki/Fedora_Ambassadors_North_America_%28FAMNA%29'))}
 			
 						<table>
 							<tr>
