we have security and games spins again

--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -79,7 +79,7 @@
        </div>
 -->
 
-<!--       <div class="high">
+       <div class="high">
     	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
@@ -100,7 +100,6 @@
   	  	   </div>
   	  	  </div>
        </div>
--->
 
        <div class="high">
     	  <div class="row top-margin">
@@ -168,7 +167,7 @@
   	  	  </div>
        </div>
 
-<!--       <div class="high">
+       <div class="high">
     	  <div class="row top-margin bottom-space">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
@@ -189,7 +188,6 @@
   	  	   </div>
   	  	  </div>
        </div>
--->
 
   	</div>
   </header>
