fix 32 bit checkum path and drop Xfce spin

--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -58,7 +58,7 @@
   	  	  </div>
        </div>
 
-       <div class="high">
+<!--       <div class="high">
     	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
@@ -79,6 +79,7 @@
   	  	   </div>
   	  	  </div>
        </div>
+-->
 
        <div class="high">
     	  <div class="row top-margin">
@@ -183,8 +184,7 @@
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 64bit!')}</a>
             </div>
             <div class="col-sm-4 col-xs-12">
-<!--              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 32bit!')}</a>
--->
+              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-CHECKSUM">${_('Validate 32bit!')}</a>
             </div>
           </div>
   	  </div>
