drop prerelease banner from Xfce download

--- a/spins.fedoraproject.org/data/content/xfce/download/index.html
+++ b/spins.fedoraproject.org/data/content/xfce/download/index.html
@@ -48,7 +48,7 @@
                   <p><a href="http://archive.fedoraproject.org/">archive.fedoraproject.org</a></p>
               </li>
           </ul>
-          <div class="bottom-margin">
+<!--          <div class="bottom-margin">
           <py:choose>
             <py:when test="global_variables.release['curr_state'] == 'Alpha'">
               <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
@@ -60,6 +60,7 @@
             </py:when>
           </py:choose>
           </div>
+-->
           <noscript>
           <div class="bottom-margin">
             <h3>${_('Verify')}</h3>
