LF sponsors Flock 2016 at Bronze

--- a/flocktofedora.org/data/content/sponsorship/index.html
+++ b/flocktofedora.org/data/content/sponsorship/index.html
@@ -103,7 +103,7 @@
 	    <div class="panel-body">
 	      <div class="row">
 		<div class="col-xs-12 col-sm-2">
-		  <!-- can be adjusted for larger images -->
+		  <img src="../../../static/images/LF_logo_NEW_Pantone.png"/>
 		</div>
 	      </div>
 	    </div>
