--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -130,7 +130,7 @@
   <div class="col-xs-12 col-sm-6 text-center top-space">
     <div class="row">
       <div class="col-xs-12 bottom-margin text-center">
-        <h1 class="thin">${_('Stay connected and informed.')}</h1>
+        <h1 class="thin">${_('Get connected and stay informed.')}</h1>
       </div>
     </div>
     <div class="row">
@@ -140,7 +140,7 @@
     </div>
 	<div class="row">
       <div class="col-xs-12 bottom-margin text-center">
-        <h4 class="thin">${Markup(_('Keep up-to-date with the Fedora Project and get all the latest news and reports in &lt;a href="%s"&gt;Fedora Magazine&lt;/a&gt;.') % ('//fedoramagazine.org/'))}</h4>
+        <h4 class="thin">${Markup(_('Want to get &lt;a href="http://whatcanidoforfedora.org/"&gt;involved&lt;/a&gt;? Find out what\'s happening in the &lt;a href="http://communityblog.fedoraproject.org/"&gt;community&lt;/a&gt;? Read up on the latest news and cool stuff at &lt;a href="http://fedoramagazine.org/"&gt;Fedora Magazine&lt;/a&gt;.'))}</h4>
       </div>
     </div>
   </div>
