Fix Build Error RSS

--- a/fedoraproject.org/data/content/join-fedora.html
+++ b/fedoraproject.org/data/content/join-fedora.html
@@ -3,10 +3,10 @@
 fpp = feedparse('http://fedoraplanet.org/rss20.xml')
 
 # Announce List
-fda = feedparse('https://lists.fedoraproject.org/rss/announce.xml')
+fda = feedparse('http://rss.gmane.org/messages/excerpts/gmane.linux.redhat.fedora.core.announce')
 
 # Devel List
-fdd = feedparse('https://lists.fedoraproject.org/rss/devel-announce.xml')
+fdd = feedparse('http://rss.gmane.org/messages/excerpts/gmane.linux.redhat.fedora.devel.announce')
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
