shorten the title in getfedora index

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -130,7 +130,7 @@
   <div class="col-xs-12 col-sm-6 text-center top-space">
     <div class="row">
       <div class="col-xs-12 bottom-margin text-center">
-        <h1 class="thin">${_('Stay connected and informed.')}</h1>
+        <h1 class="thin">${Markup(_('Be connected &amp; informed.'))}</h1>
       </div>
     </div>
     <div class="row">
