flocktofedora: Call for submissions ended, post schedule link

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -65,7 +65,7 @@
               <h3 class="panel-title"><i class="fa fa-calendar"></i> ${_('Schedule')}</h3>
             </div>
             <div class="panel-body">
-              ${_('The schedule for Flock 2016 will be announced after the call for submissions has ended.')}
+              ${_('The schedule for Flock 2016 is now available.')} <a href="https://flock2016.sched.org/">${_('Visit the schedule now.')}</a>
             </div>
           </div>
   	  	</div>
@@ -76,8 +76,7 @@
                 <h3 class="panel-title"><i class="fa fa-clock-o"></i> ${_('Call for submissions')}</h3>
               </div>
               <div class="panel-body">
-		<p>${_('The call for submissions for Flock presentation and workshop talks is open. You can submit a talk via the registration page.')} <a href="https://register.flocktofedora.org">${_('Visit the registration page now.')}</a></p>
-		<p>${_('Deadline for submissions:')} <strong>${_('Friday, April 8, 2016')}</strong></p>
+		${_('The call for submissions for Flock presentation and workshop talks has ended.')}
               </div>
             </div>
   	  	  </div>
